Changed how the plugin is scoped. Changed from using id as style selectors to classnames to prevent dom conflicts with multiple players.
Exposed more functions as public(private) for test to run

Fixed onAdError scope

Check error type

Wrong scope for error callback function

Changed third_party out with the path to videojs-contrib-ads in the node_modules folder, so examples works out of the box after runining npm install.

Fixed type

--- a/src/videojs.ima.css
+++ b/src/videojs.ima.css
@@ -14,13 +14,6 @@
  * limitations under the License.
  */
 
-#ima-ad-container {
-  top: 0px;
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 100%;
-}
 
 /* Move overlay if user fast-clicks play button. */
 .video-js.vjs-playing .bumpable-ima-ad-container {
@@ -38,7 +31,7 @@
   margin-top: -40px;
 }
 
-#ima-controls-div {
+.ima-controls-div {
   bottom:0px;
   height: 37px;
   position: absolute;
@@ -73,30 +66,30 @@
     endColorstr='#07141E',GradientType=0 ); /* IE6-9 */
 }
 
-#ima-countdown-div {
+.ima-countdown-div {
   height: 11px;
   color: #FFFFFF;
   text-shadow: 0 0 0.2em #000;
 }
 
-#ima-seek-bar-div {
+.ima-seek-bar-div {
   top: 12px;
   height: 3px;
   position: absolute;
   background: rgba(255, 255, 255, .4);
 }
 
-#ima-progress-div {
+.ima-progress-div {
   width: 0px;
   height: 3px;
   background-color: #ECC546;
 }
 
-#ima-countdown-div {
+.ima-countdown-div {
   height: 10px;
 }
 
-#ima-play-pause-div, #ima-mute-div, #ima-slider-div, #ima-fullscreen-div {
+.ima-play-pause-div, .ima-mute-div, .ima-slider-div, .ima-fullscreen-div {
   width: 35px;
   height: 20px;
   top: 11px;
@@ -109,12 +102,12 @@
   font-family: VideoJS;
 }
 
-#ima-mute-div {
+.ima-mute-div {
   left: auto;
   right: 85px;
 }
 
-#ima-slider-div {
+.ima-slider-div {
   left: auto;
   right: 35px;
   width: 50px;
@@ -123,13 +116,13 @@
   background-color: #555555;
 }
 
-#ima-slider-level-div {
+.ima-slider-level-div {
   width: 100%;
   height: 10px;
   background-color: #ECC546;
 }
 
-#ima-fullscreen-div {
+.ima-fullscreen-div {
   left: auto;
   right: 0px;
 }
